--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Main */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 * {
@@ -17,7 +19,10 @@
     --text-color: #fff;
     --main-color: #0ef;
 }
-
+@font-face {
+    font-family: 'Futura';
+    src: url(/fonts/PatuaOne-Regular.ttf);
+  }
 
 html{
     font-size: 62.5%;
@@ -280,7 +285,11 @@ span {
 }
 
 
-
+.contact {
+    background-image: url("https://wallpapercave.com/wp/wp7848360.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
 
 .contact h2{
     margin-bottom: 3rem;
@@ -552,12 +561,14 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    justify-content: space-between;
+    
   }
   
   .social-member img {
     width: 100px;
     height: 100px;
+    border-radius: 50%;
   }
   
   .social-member h4, .social-member p {
@@ -601,4 +612,183 @@ span {
     .services-container {
     margin-top: 12rem;
     }
+}
+
+/*Links secccion contact */
+.butonwat {
+    font-size: larger;
+    color: aliceblue;
+}
+
+.butonwat:hover {
+    color: var(--main-color);
+}
+
+
+
+/*Boton de subir */
+.wheel {
+    border-radius: 50%;
+    position: absolute;
+    height: 55vw;
+    width: 55vw;
+    max-width: 400px;
+    max-height: 400px;
+    animation-name: wheel;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    
+    
+}
+  
+    
+
+    
+
+.cabin {
+    background-color: transparent;
+    width: 20%;
+    height: 20%;
+    position: absolute;
+
+    transform-origin: 50% 0%;
+    animation: cabins 10s ease-in-out infinite;
+    }
+    
+.cabin:nth-of-type(1) {
+    right: -8.5%;
+    top: 50%;
+}
+.cabin:nth-of-type(2) {
+    right: 17%;
+    top: 93.5%;
+}
+.cabin:nth-of-type(3) {
+    right: 67%;
+    top: 93.5%;
+}
+.cabin:nth-of-type(4) {
+      left: -8.5%;
+      top: 50%;
+    }
+    .cabin:nth-of-type(5) {
+      left: 17%;
+      top: 7%;
+    }
+    .cabin:nth-of-type(6) {
+      right: 17%;
+      top: 7%;
+    }
+    
+    @keyframes wheel {
+       0% {
+         transform: rotate(0deg);
+       }
+       100% {
+         transform: rotate(360deg);
+       }
+    }
+    
+    @keyframes cabins {
+      0% {
+        transform: rotate(0deg);
+      }
+     
+      100% {
+        transform: rotate(-360deg);
+      }
+    }
+  
+  @media screen and (max-width: 400px) {
+    .wheel {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  
+  
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Dos columnas del mismo tamaño */
+    height: 100%;
+  }
+  
+
+@media screen and (max-width: 767px) {
+    .wheel {
+    display: none;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    }
+}
+
+.heading {
+    text-align: center !important;
+    font-family: 'Futura';
+}
+
+
+
+@media (max-width: 767px) {
+    .footer {
+        display: flex;
+        flex-direction: inline;
+    }
+  
+    .footer-text {
+        text-align: left;
+    }
+  
+    .footer-iconTop {
+        margin-left: auto;
+        margin-top: 10px;
+    }
+  }
+  .popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 2;
+  }
+  
+  .popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    max-width: 90%;
+    height: 600px;
+    background-color: rgb(244, 244, 238);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 2%;
+  }
+  
+  #close-button {
+    margin-top: 20px;
+  }
+.text-uppercase {
+    color: black;
+    font-family: 'Futura';
+    margin-top: 15px;
+}  
+.btn {
+    cursor: pointer;
 }
