--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*Main */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Manrope:wght@400;700&family=Orbitron:wght@600&display=swap');
 
 * {
     margin: 0;
@@ -63,6 +64,7 @@ section{
     color: var(--main-color);
     font-weight: 600;
     cursor:default;
+    font-family: Orbitron;
 
 }
 
@@ -113,6 +115,7 @@ ul {
     }
 }
 
+
 .home-content h3{
     font-size: 4.2rem;
     font-weight: 700;
@@ -120,6 +123,21 @@ ul {
 
 .home-content h3:nth-of-type(2){
     margin-bottom: 2rem;
+}
+
+.popup1{
+    line-height: 1.1;
+    
+}
+.popup1 h2{
+    font-family: 'Orbitron';
+    font-size: bold;
+   
+}
+.popup1 p{
+    font-family: 'Manrope';
+    font-size: 1.6rem;
+    margin-bottom: 20px;
 }
 
 span {
@@ -221,6 +239,14 @@ span {
     gap: 2rem;
 }
 
+.services-container1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
 .services-container .services-box{
     flex: 1 1 30rem;
     background: var(--second-bg-color);
@@ -231,7 +257,38 @@ span {
    
 
 }
+.services-container .services-box1{
+    flex: 1 1 30rem;
+    padding: 3rem 2rem 4rem;
+    text-align: center;
+   
+   
 
+}
+.services-container .services-box2{
+    flex: 1 1 30rem;
+    padding: 3rem 2rem 4rem;
+    text-align: center;
+   
+   
+
+}
+
+
+
+.services-container .services-box2 img{
+    width: 500px;
+    height: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 3);
+    border-radius: 1rem;
+}
+
+@media screen and (max-width: 767px) {
+    .services-container .services-box2 img{
+        display: none;
+    }
+}
+    
 
 
 .services-box i {
@@ -765,9 +822,10 @@ span {
 }
 
 .popup-content {
+    text-align: center;
     position: absolute;
     top: 50%;
-    left: 15%;
+    left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
     max-width: 90%;
@@ -814,7 +872,7 @@ span {
 }
 
 .popup-content-1 {
-    
+    color: black;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -830,6 +888,27 @@ span {
     border: 2px solid #00EEFF;
 }
 
+.popup-content-1 h2 {
+    font-family: 'Orbitron';
+    font-size: 2rem;
+    margin-top: 15px;
+}
+
+.popup-content-1 p {
+    font-family: 'Manrope';
+    line-height: 1.5;
+}
+
+@media screen and (max-width: 1024px) {
+    
+    .popup-content-1 h2 {
+        font-size: 2.5rem;
+    }
+    .popup-content-1 p {
+        font-size: 1.7rem;
+    }
+}
+
 .popup-overlay-2 {
     display: none;
     position: fixed;
@@ -843,6 +922,7 @@ span {
 }
 
 .popup-content-2 {
+    color: black;
     position: absolute;
     top: 50%;
     left: 85%;
@@ -857,11 +937,107 @@ span {
     border: 2px solid #00EEFF;
 }
 
+.popup-content-2 h2 {
+    font-family: 'Orbitron';
+    font-size: 2rem;
+    margin-top: 20px;
+}
+
+.popup-content-2 p {
+    font-family: 'Manrope';
+    line-height: 1.5;
+    
+    
+}
+
 @media screen and (max-width: 767px) {
     .popup-content-2 {
         top: 60%;
         left: 50%;
     }
+    .popup-content-2 h2 {
+        font-size: 2.5rem;
+        margin-top: 20px;
+    }
+    .popup-content-2 p {
+        font-size: 1.7rem;
+        
+    }
 }
+.grid-item1{
+display: inline-flex;
+position: relative;
+text-align: center;
+
+}
+
+@media screen and (max-width: 767px) {
+    .grid-item1 {
+        margin-bottom: 90px;
+        
+    }
+}
+
+.popup-overlay-3 {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 2;
+}
+
+.popup-content-3 {
+    color: black;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-180%, -50%);
+    width: 400px;
+    max-width: 90%;
+    height: 650px;
+    background-color: rgb(244, 244, 238);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    border-radius: 2%;
+    border: 2px solid #00EEFF;
     
+}
+
+.popup-content-3 h2 {
+    font-family: 'Orbitron';
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+.popup-content-3 p {
+    font-family: 'Manrope';
+    line-height: 1.5;
+}
+
+@media screen and (max-width: 1024px) {
+    .popup-content-3 {
+        transform: translate(-50%, -50%);
+    }
+    .popup-content-3 h2 {
+        font-size: 2.5rem;
+    }
+    .popup-content-3 p {
+        font-size: 1.7rem;
+    }
+}
+
+
+.contact-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     
+}
+
