--- a/style.css
+++ b/style.css
@@ -1041,3 +1041,8 @@ text-align: center;
     
 }
 
+@media only screen and (max-width: 768px) {
+    #parrafo-header {
+      display: none;
+    }
+  } 
